# fp-tools

./: .gitignore  CMakeLists.txt  README.md  input.toml  input.yaml  requirements.txt  traj.xyz
examples/: input_template.toml
include/analysis/: corr.h  mfpt.h  msd.h  rdf.h
include/core/: base.h  math.h  traj_prov.h
include/io/: config_par.h  config_utils.h  lamptraj_par.h  logger.h  xyztraj_par.h
src/: fp_plot.py  fptools.cpp
src/analysis/: corr.cpp  mfpt.cpp  msd.cpp  rdf.cpp
src/io/: config_par.cpp  lamptraj_par.cpp  logger.cpp  xyztraj_par.cpp
src/plotting/: plot_msd.py
